--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "v2",
+  "name": "Smart-Pot-App",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://imanajjari.github.io/Smart-Pot-App",
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
-    "cra-template": "1.2.0",
     "framer-motion": "^12.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
