--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sweetalert2": "^11.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
